[gd_scene load_steps=6 format=3 uid="uid://c2wqrhc76jt1c"]

[ext_resource type="Script" uid="uid://ljky4pvpm8mk" path="res://HUDs/SwapSpellMenu.gd" id="1_8dwud"]
[ext_resource type="PackedScene" uid="uid://3g685ilkl0qx" path="res://HUDs/Components/BaseMenuUI.tscn" id="2_xaoks"]
[ext_resource type="Texture2D" uid="uid://cs8cp06d6ocpq" path="res://Resources/book.png" id="3_8dwud"]
[ext_resource type="PackedScene" uid="uid://d2rtprrmgnbft" path="res://HUDs/Components/HeaderSkillCard.tscn" id="4_8dwud"]
[ext_resource type="Theme" uid="uid://bngt8jkm3fvb1" path="res://Resources/hud_elements/default.theme" id="4_mbbew"]

[node name="SwapSpell" type="CanvasLayer" groups=["windows"]]
layer = 0
script = ExtResource("1_8dwud")

[node name="Menu" parent="." instance=ExtResource("2_xaoks")]

[node name="ContentContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 75
theme_override_constants/margin_top = 75
theme_override_constants/margin_right = 75
theme_override_constants/margin_bottom = 75

[node name="VBoxContainer" type="VBoxContainer" parent="ContentContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ContentContainer/VBoxContainer"]
clip_contents = true
layout_mode = 2
theme_override_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ContentContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="ContentContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
light_mask = 2
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
texture = ExtResource("3_8dwud")
expand_mode = 3
stretch_mode = 4

[node name="Label" type="Label" parent="ContentContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_mbbew")
theme_override_font_sizes/font_size = 16
text = "Spell Tome"
horizontal_alignment = 1

[node name="HeaderSkillCard" parent="ContentContainer/VBoxContainer/HBoxContainer" instance=ExtResource("4_8dwud")]
layout_mode = 2

[node name="HeaderSkillCard2" parent="ContentContainer/VBoxContainer/HBoxContainer" instance=ExtResource("4_8dwud")]
layout_mode = 2

[node name="HeaderSkillCard3" parent="ContentContainer/VBoxContainer/HBoxContainer" instance=ExtResource("4_8dwud")]
layout_mode = 2

[node name="HeaderSkillCard4" parent="ContentContainer/VBoxContainer/HBoxContainer" instance=ExtResource("4_8dwud")]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="ContentContainer/VBoxContainer"]
light_mask = 3
layout_mode = 2
theme_override_constants/separation = 10

[node name="ScrollContainer" type="ScrollContainer" parent="ContentContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SkillContainer" type="HFlowContainer" parent="ContentContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/v_separation = 10
